yoshimi 1.5.8 M

2018-6-29 Will
* GUI config controls converted to enum.
* Defined 'insert' enums, and converted all occurrences.

2018-6-25 Will
* BugFix: GUI mixer controls not setting part window.
* Forgot section changes in resolveReplies.
* Interchange config controls converted to enum.
* CLI config controls converted to enum.

2018-6-24 Will
* GUI part controls converted.
* GUI main engine controls converted.
* Further work on addVoice/addMod controls.
  These no longer need to be fixed values.

2018-6-23 Will
* Added engines to globals.h
* Further work on Interchange.cpp
* CLI Part level mostly converted.
* Corrected multiple commit/merge failures :(
* Further adustments to Interchange.cpp

2018-6-22 Will
* Moved CommandBlock from MiscFuncs'.h to globals.h
* Set up part level controls enum in globals.h
  Converted actual commands in Interchange.cpp
* Implimented small optimisation for reads.
* Minor doc updates.
* Completed part controls move in  Interchange.cpp

2018-6-21 Will
* Instruments can now be swapped between banks and roots.
* Small doc updates.
* Created new globals.h file.
  Transfered definitions from CMakeLists.txt

2018-6-13 Will
* Small optimisation in 'zread'.
  Also shortened read loop usleep time to 10uS.

2018-6-13 Will
* implimented 'zread' CLI test for command structure.

2018-6-11 Will
* Bugfix: Wasn't reloading solo-twoway.
  Saved OK, but reloaded as loop.
* Formalised manual search and opening.
  GUI now only calls via command block.


2018-6-5 Will
* BugFix: Clearing kitmode key ranges was resetting.
* BugFix: Bank renaming now working across roots.
  Disabled instrument swapping across these for now.
* Improved banks swap error checks.
* Added gzipped manual patch from Hermann.
* Set as 2nd bugfix release :(


2018-6-1 Will
* Set as bugfix release.

2018-5-31 Will
* Corrected GUI handling of part saves.
  Also improved label colour handling.
* Corrected Envelope freemode delete point.

2018-5-28 Will